--- a/index.html
+++ b/index.html
@@ -22,19 +22,37 @@
         <div class="menu">
             <div class="menu-time">
                 <h2 style="color: red;">Time Left:</h2>
-                <h2>0</h2>
+                <h2 id="time-left">0</h2>
             </div>
             <div class="menu-score">
                 <h2 style="color: red;">Your Score:</h2>
-                <h2>0</h2>
+                <h2 id="score">0</h2>
             </div>
             <div class="menu-lifes">
-                <img src="" />
+                <img src="./src/images/player.png" alt="player's photo" height="50px"/>
                 <h2>x3</h2>
             </div>
         </div>
 
         <div class="panel">
+
+            <div class="panel-row">
+                <div class="square" id="1"></div>
+                <div class="square" id="2"></div>
+                <div class="square" id="3"></div>
+            </div>
+
+            <div class="panel-row">
+                <div class="square" id="4"></div>
+                <div class="square" id="5"></div>
+                <div class="square" id="6"></div>
+            </div>
+
+            <div class="panel-row">
+                <div class="square" id="7"></div>
+                <div class="square" id="8"></div>
+                <div class="square" id="9"></div>
+            </div>
 
         </div>
     </div>
